--- a/css/style.css
+++ b/css/style.css
@@ -483,7 +483,7 @@ ul.clients li{
 	background: #C59A6D;
 }
 
-#contact{
+#contatti{
 	background: #282f35;
 	padding: 100px 0;
 	color: #ffffff;
@@ -525,12 +525,12 @@ address{
 	letter-spacing: 1px;
 }
 
-#contact input.form-control,
-#contact textarea.form-control {
+#contatti input.form-control,
+#contatti textarea.form-control {
 margin-bottom: 30px;
 }
 
-#contact .form-control {
+#contatti .form-control {
 	display: block;
 	width: 100%;
 	height: 40px;
@@ -551,7 +551,7 @@ margin-bottom: 30px;
 	transition: all 0.5s;
 }
 
-#contact .form-control:focus {
+#contatti .form-control:focus {
 	border-color: #C59A6D;
 	outline: 0;
 	-webkit-box-shadow: none;
